--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>RuleMate</title>
 </head>
+
 <body>
-    <h2>Calculadora de Regra de Três</h2>
-    <div>
-        <label for="valor1">Quanto vale a prova?</label>
-        <input type="number" id="valeProva">
-    <div>
-        <label for="proporcao1">Quantas questões a prova tem?</label>
-        <input type="number" id="questoesTem">
+    <div class="container">
+        <div class="item header">
+            <h2>Calculadora de Regra de Três</h2>
+        </div>
+        <div class="item content">
+            <div class="cardVP">
+                <label for="valor1">Quanto vale a prova?</label>
+                <input type="number" id="valeProva">
+            </div>
+            <div class="cardQPT">
+                <label for="proporcao1">Quantas questões a prova tem?</label>
+                <input type="number" id="questoesTem">
+            </div>
+            <div class="QC">
+                <label for="proporcao2">Quantas questões você acertou?</label>
+                <input type="number" id="acertosProva">
+            </div>
+        </div>
+        <div class="item footer">
+            <button onclick="calcularRegraDeTres()">Calcular</button>
+            <div id="resultado"></div>
+        </div>
     </div>
-    </div>
-    <div>
-        <label for="proporcao2">Quantas questões você acertou?</label>
-        <input type="number" id="acertosProva">
-    </div>
-    <button onclick="calcularRegraDeTres()">Calcular</button>
-    <div id="resultado"></div>
 </body>
-<script src="js/script.js"></script> 
+<script src="js/script.js"></script>
 </html>
