--- a/index.html
+++ b/index.html
@@ -2,36 +2,53 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>RuleMate</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="item header">
-            <h2>Calculadora de Regra de Três</h2>
-        </div>
-        <div class="item content">
-            <div class="cardVP">
-                <label for="valor1">Quanto vale a prova?</label>
-                <input type="number" id="valeProva">
+        <header>
+            <h1>RuleMate</h1>
+            <h4>Calculando regra de 3</h4>
+        </header>
+        <section>
+
+            <div class="checkbox-wrapper-14">
+                <input id="s1-14" type="checkbox" class="switch" checked>
+                <label for="s1-14">Grandezas diretamente proporcionais</label>
+              </div>
+              
+            <div class="inputBox">
+                <!--<label for="valor1">Quanto vale a prova?</label> -->
+                <input type="number"  required="required" />
+                <span>Ex.: Valor da Prova</span>
             </div>
-            <div class="cardQPT">
-                <label for="proporcao1">Quantas questões a prova tem?</label>
-                <input type="number" id="questoesTem">
+
+            <div class="inputBox">
+                <!-- <label for="proporcao1">Quantas questões a prova tem?</label>  -->
+                <input type="number"  required="required" />
+                <span>Nº Questões da Prova</span>
             </div>
-            <div class="QC">
-                <label for="proporcao2">Quantas questões você acertou?</label>
-                <input type="number" id="acertosProva">
+
+            <div class="inputBox">
+                <!-- <label for="proporcao2">Quantas questões você acertou?</label>    -->
+                <input type="number" required="required" />
+                <span>Questões Certas</span>
             </div>
-        </div>
-        <div class="item footer">
-            <button onclick="calcularRegraDeTres()">Calcular</button>
+
+        </section>
+        <section class="footer">
+
+            <button class="btn" onclick="calcularRegraDeTres()">Calcular</button>
             <div id="resultado"></div>
-        </div>
+
+        </section>
+
     </div>
 </body>
 <script src="js/script.js"></script>
+
 </html>
