--- a/index.html
+++ b/index.html
@@ -15,38 +15,30 @@
             <h4>Calculando regra de 3</h4>
         </header>
         <section>
-
             <div class="checkbox-wrapper-14">
                 <input id="s1-14" type="checkbox" class="switch" checked>
                 <label for="s1-14">Grandezas diretamente proporcionais</label>
-              </div>
-              
-            <div class="inputBox">
-                <!--<label for="valor1">Quanto vale a prova?</label> -->
-                <input type="number"  required="required" />
-                <span>Ex.: Valor da Prova</span>
             </div>
-
             <div class="inputBox">
-                <!-- <label for="proporcao1">Quantas questões a prova tem?</label>  -->
-                <input type="number"  required="required" />
-                <span>Nº Questões da Prova</span>
+                <input type="number" id="valor1" required="required" />
+                <span>Valor da 1ª Grandeza</span>
             </div>
-
             <div class="inputBox">
-                <!-- <label for="proporcao2">Quantas questões você acertou?</label>    -->
-                <input type="number" required="required" />
-                <span>Questões Certas</span>
+                <input type="number" id="valor2" required="required" />
+                <span>Valor da 2ª Grandeza</span>
             </div>
-
+            <div class="inputBox">
+                <input type="number" id="valor3" required="required" />
+                <span>Valor Comparativo</span>
+            </div>
         </section>
         <section class="footer">
-
-            <button class="btn" onclick="calcularRegraDeTres()">Calcular</button>
-            <div id="resultado"></div>
-
+            <button class="btn">Calcular</button>
+            <dialog>
+                <div class="close"></div>
+                <div id="resultado" class="resultado"></div>
+            </dialog>
         </section>
-
     </div>
 </body>
 <script src="js/script.js"></script>
