Preparando Folha Cascata de variaveis de cores

--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <h1>RuleMate</h1>
-            <h4>Calculando regra de 3</h4>
-        </header>
-        <section>
-            <div class="checkbox-wrapper-14">
-                <input id="s1-14" type="checkbox" class="switch" checked>
-                <label for="s1-14">Grandezas diretamente proporcionais</label>
-            </div>
-            <div class="inputBox">
-                <input type="number" id="valor1" required="required" />
-                <span>Valor da 1ª Grandeza</span>
-            </div>
-            <div class="inputBox">
-                <input type="number" id="valor2" required="required" />
-                <span>Valor da 2ª Grandeza</span>
-            </div>
-            <div class="inputBox">
-                <input type="number" id="valor3" required="required" />
-                <span>Valor Comparativo</span>
-            </div>
-        </section>
-        <section class="footer">
-            <button class="btn">Calcular</button>
-            <dialog>
-                <div class="close"></div>
-                <div id="resultado" class="resultado"></div>
-            </dialog>
-        </section>
-    </div>
+    <header>
+        <h1>RuleMate</h1>
+        <h4>Calculando regra de 3</h4>
+    </header>
+    <section>
+        <div class="container"></div>
+        <div class="checkbox-wrapper-14">
+            <input id="s1-14" type="checkbox" class="switch" checked>
+            <label for="s1-14">Grandezas diretamente proporcionais</label>
+        </div>
+        <div class="inputBox">
+            <input type="number" id="valor1" required="required" />
+            <span>Se...(Inserir Valor)</span>
+        </div>
+        <div class="inputBox">
+            <input type="number" id="valor2" required="required" />
+            <span>Vale...(Inserir Valor)</span>
+        </div>
+        <div class="inputBox">
+            <input type="number" id="valor3" required="required" />
+            <span>Quanto que Vale...</span>
+        </div>
+        <button class="btn">Calcular</button>
+        <dialog>
+            <div id="resultado" class="resultado"></div>
+        </dialog>
+        </div>
+    </section>
+    <section class="footer">
+        <hr>
+    </section>
 </body>
 <script src="js/script.js"></script>
 
