colocando animações nos elementos

--- a/html/index.html
+++ b/html/index.html
@@ -10,28 +10,30 @@
 
 <body>
     <header>
-        <h1>RuleMate</h1>
+        <h1 class="animeTitle">RuleMate</h1>
         <h4>Calculando regra de 3</h4>
     </header>
     <section>
         <div class="container"></div>
-        <div class="checkbox-wrapper-14">
+        <div class="checkbox-wrapper-14 optionsGrandezas">
             <input id="s1-14" type="checkbox" class="switch" checked>
             <label for="s1-14">Grandezas diretamente proporcionais</label>
         </div>
-        <div class="inputBox">
+        <div class="inputBox anime1">
             <input type="number" id="valor1" required="required" />
             <span>Se...(Inserir Valor)</span>
         </div>
-        <div class="inputBox">
+        <div class="inputBox anime2">
             <input type="number" id="valor2" required="required" />
             <span>Vale...(Inserir Valor)</span>
         </div>
-        <div class="inputBox">
+        <div class="inputBox anime3">
             <input type="number" id="valor3" required="required" />
             <span>Quanto que Vale...</span>
         </div>
-        <button class="btn">Calcular</button>
+        <div class="anime4">
+            <button class="btn">Calcular</button>
+        </div>
         <dialog>
             <div id="resultado" class="resultado"></div>
         </dialog>
